--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-   <head>
-    <title>Platzi video</title>
-   </head>
-   <body>
+  <head>
+    <title>Platzi Video</title>
+  </head>
+  <body>
     <div id="app"></div>
-   </body>
+  </body>
 </html>
